﻿IMPROVEMENTS / FIXES
- UI:
	- Fix numeric input fields not updating when they should.
	- New Team Icons toolbar icon for easier identification.
- AI:
	- Add a toggle to the pilot AI to disable ramming ground targets.
- Armor:
	- Allow changing the unclamped min/max dimensions for proc armor in the settings.cfg (PROC_ARMOR_ALT_LIMITS).
- Weapons:
	- Missiles:
		- Allow missiles to be fired from their full Dynamic launch range isntead of static launch range.
		- Fix missiles with a reload module launching incorrectly.
		- Add trigger range setting for cluster missile submunition launch.
		- Fix MultiMissilelaunchers resetting detonation Distance.
		- Fix MML "TNT Mass Equivalent = -0.0018726" PAW label.
		- Fixed Missiles with ModuleMissileRearm improperly launching.
		- Fixed MMLs resetting detonation distance.
		- Missile/bomb fratricide prevention now also checks the source vessel name to allow explosives to be destroyed by explosives of the same type from another vessel.
- Competition:
	- Adjust round progress strings in tournaments: ranked => 0→N, shuffled => 1→N.
	- Report total number of rounds for ranked tournaments properly.

v1.6.4.1
IMPROVEMENTS / FIXES
- UI:
	- Add an option for disabling the self-updating of the text in numeric input fields.
		- When the value fails to parse (after the delay) the text will turn red.
		- Toggling the numeric fields or closing the windows will reset the field to the most recently successfully parsed value.
		- The text will still be updated if the parsed value becomes clamped within the limits of the field.
	- Make the delay for the "read and interpret" logic of numeric input fields customisable (default 0.5s).
- AI:
	- Some QoL improvements for auto-tuning: automatically enable AI and engines and move the craft to the autotuning altitude.
- Detectors:
	- Fix Conformal Decals throwing off RCS calculation in editor (SPH/VAB).