@@ -623,6 +623,7 @@ Localization
         #LOC_BDArmory_DefaultAltitude = Default Alt.
         #LOC_BDArmory_MinAltitude = Min Altitude
         #LOC_BDArmory_MaxAltitude = Max Altitude (AGL)
+        #LOC_BDArmory_HardMinAltitude = Hard Min Altitude
         
         #LOC_BDArmory_PilotAI_Speeds = Speeds
         #LOC_BDArmory_MaxSpeed = Max Speed	
