@@ -4,6 +4,8 @@
 	- New Team Icons toolbar icon for easier identification.
 - AI:
 	- Add a toggle to the pilot AI to disable ramming ground targets.
+	- Add a toggle to the pilot AI for treating the min altitude as a hard limit.
+	- Include the TWR of a vessel when determining the gain altitude slope, allowing much higher slopes.
 - Armor:
 	- Allow changing the unclamped min/max dimensions for proc armor in the settings.cfg (PROC_ARMOR_ALT_LIMITS).
 - Weapons:
